--- a/exercicio2/style.css
+++ b/exercicio2/style.css
@@ -1,22 +1,30 @@
 .longe-bordas{
     background-color: #FFA6A9;
+    padding: 5px 10px;
+    display: block; 
+    margin: 0px auto;
   }
   
   .afastado{
     background-color: #77C0ED;
+    margin: 30px;
+    display: block;
   }
   .alto{
     background-color: #C3E887;
+    height: 300px;
   }
   
   .largo{
   background-color: #FFE396;
+  width: 500px;
   }
   
   .bordado{
     background-color: #AF9BCC;
+    border: 1px solid black;
   }
   
   .sumido{
-   
+   display: none;
   }
