--- a/exercicio3/style.css
+++ b/exercicio3/style.css
@@ -1,25 +1,34 @@
-*{
-  padding: 0;
-  margin: 0;
-}
-header{
-  
+* {
+    padding: 0;
+    margin: 0;
 }
 
-section{
-  float: left;
-/*float é uma propriedade que permite deixar elementos à direita ou à esquerda da tela. Não costuma ser usado. Aqui, é usado apenas para ilustrar diferenças.*/
-  width: 840px;
-  padding: 40px;
+main {
+    font-family: Helvetica;
 }
 
-aside{
-  float:right;
- /*float é uma propriedade que permite deixar elementos à direita ou à esquerda da tela. Não costuma ser usado. Aqui, é usado apenas para ilustrar diferenças.*/
-  padding: 20px;
-  width: 340px;
+/* header {
+} */
+
+section {
+    float: left;
+    /*float é uma propriedade que permite deixar elementos à direita ou à esquerda da tela. Não costuma ser usado. Aqui, é usado apenas para ilustrar diferenças.*/
+    width: 840px;
+    padding: 20px;
 }
 
-article{
-  margin: 10px 0;
+aside {
+    float: right;
+    /*float é uma propriedade que permite deixar elementos à direita ou à esquerda da tela. Não costuma ser usado. Aqui, é usado apenas para ilustrar diferenças.*/
+    padding: 20px;
+    width: 340px;
+}
+
+article {
+    margin: 10px 0;
+}
+@media screen and (max-width: 820px) {
+  *{
+    color: red;
+  }
 }
